[gd_scene load_steps=57 format=3 uid="uid://ba0i6aolak7sl"]

[ext_resource type="Texture2D" uid="uid://c33vak174b6nu" path="res://sprite/ladder.png" id="1_1oj5k"]
[ext_resource type="Script" uid="uid://ba70f0g66ue2a" path="res://scripts/main_game.gd" id="1_385x7"]
[ext_resource type="Texture2D" uid="uid://c5otm7revaaee" path="res://sprite/DiceBase.png" id="2_yx7mw"]
[ext_resource type="Texture2D" uid="uid://bqsiwmqrdftyw" path="res://sprite/yellow.png" id="3_eq12k"]
[ext_resource type="Texture2D" uid="uid://cyuvuqd1am10d" path="res://sprite/green.png" id="4_u4t67"]
[ext_resource type="Texture2D" uid="uid://dirfrjodgnde4" path="res://sprite/blue.png" id="5_t6c1r"]
[ext_resource type="Texture2D" uid="uid://cxt4xt24kysv1" path="res://sprite/red.png" id="6_kgivx"]
[ext_resource type="Texture2D" uid="uid://1yuk17uxipbu" path="res://sprite/dice_animation/dice0001.png" id="7_r2ag1"]
[ext_resource type="Texture2D" uid="uid://chmm8c1vwiyad" path="res://sprite/dice_animation/dice0002.png" id="8_g5lq6"]
[ext_resource type="Texture2D" uid="uid://bl5pms1p23nl7" path="res://sprite/dice_animation/dice0003.png" id="9_c3wr8"]
[ext_resource type="Texture2D" uid="uid://kwya5k2rulw3" path="res://sprite/dice_animation/dice0004.png" id="10_vv7wd"]
[ext_resource type="Texture2D" uid="uid://bdb6tpcy0u0go" path="res://sprite/dice_animation/dice0005.png" id="11_eu8ig"]
[ext_resource type="Texture2D" uid="uid://yb0hkfls3q30" path="res://sprite/dice_animation/dice0006.png" id="12_e022q"]
[ext_resource type="Texture2D" uid="uid://cpap60cq3rny" path="res://sprite/dice_animation/dice0007.png" id="13_fbghw"]
[ext_resource type="Texture2D" uid="uid://dg6ba4x3o385j" path="res://sprite/dice_animation/dice0008.png" id="14_385x7"]
[ext_resource type="Texture2D" uid="uid://u6mke3ayoijq" path="res://sprite/dice_animation/dice0009.png" id="15_hvfsc"]
[ext_resource type="Texture2D" uid="uid://bj37vrnvpaj2u" path="res://sprite/dice_animation/dice0010.png" id="16_n3upd"]
[ext_resource type="Texture2D" uid="uid://c0nv78qifkck0" path="res://sprite/dice_animation/dice0011.png" id="17_h0mvv"]
[ext_resource type="Texture2D" uid="uid://dt1shr85d4ai2" path="res://sprite/dice_animation/dice0012.png" id="18_sls3e"]
[ext_resource type="Texture2D" uid="uid://cdl5wb8tn76ls" path="res://sprite/dice_animation/dice0013.png" id="19_lx2ww"]
[ext_resource type="Texture2D" uid="uid://c77eaql0tx7u2" path="res://sprite/dice_animation/dice0014.png" id="20_kmnmp"]
[ext_resource type="Texture2D" uid="uid://dvescgue1352j" path="res://sprite/dice_animation/dice0015.png" id="21_31efi"]
[ext_resource type="Texture2D" uid="uid://cvpkwjn15l2xh" path="res://sprite/dice_animation/dice0016.png" id="22_j82wb"]
[ext_resource type="Texture2D" uid="uid://diyl3etad5sr3" path="res://sprite/dice_animation/dice0017.png" id="23_s3fnt"]
[ext_resource type="Texture2D" uid="uid://b8cuxqau8daft" path="res://sprite/dice_animation/dice0018.png" id="24_fgtea"]
[ext_resource type="Texture2D" uid="uid://vivvhfkgy36b" path="res://sprite/dice_animation/dice0019.png" id="25_ji3tb"]
[ext_resource type="Texture2D" uid="uid://d0alj81h4idn0" path="res://sprite/dice_animation/dice0020.png" id="26_x4tg7"]
[ext_resource type="Texture2D" uid="uid://dan0d2abpk116" path="res://sprite/dice_animation/dice0021.png" id="27_uwsi6"]
[ext_resource type="Texture2D" uid="uid://xdxhifos63k4" path="res://sprite/dice_animation/dice0022.png" id="28_o2gos"]
[ext_resource type="Texture2D" uid="uid://cqmo085btow45" path="res://sprite/dice_animation/dice0023.png" id="29_4vxdq"]
[ext_resource type="Texture2D" uid="uid://rej0l4r55mpy" path="res://sprite/dice_animation/dice0024.png" id="30_07j2u"]
[ext_resource type="Texture2D" uid="uid://bhhy51ss4ey5f" path="res://sprite/dice_animation/dice0025.png" id="31_5eemc"]
[ext_resource type="Texture2D" uid="uid://sdxj81tdoof3" path="res://sprite/dice_animation/dice0026.png" id="32_rs680"]
[ext_resource type="Texture2D" uid="uid://cg32ejxpetuim" path="res://sprite/dice_animation/dice0027.png" id="33_j36ax"]
[ext_resource type="Texture2D" uid="uid://dh2sx57l4i8b7" path="res://sprite/dice_animation/dice00028.png" id="34_ptgut"]
[ext_resource type="Texture2D" uid="uid://jmbdylkpcb18" path="res://sprite/dice_animation/dice0029.png" id="35_fvacl"]
[ext_resource type="Texture2D" uid="uid://dnc72tw253xfe" path="res://sprite/dice_animation/dice0030.png" id="36_q58vh"]
[ext_resource type="Texture2D" uid="uid://0ljwdvg1tv5l" path="res://sprite/dice_animation/dice0031.png" id="37_jtphu"]
[ext_resource type="Texture2D" uid="uid://dapok0ial6ytu" path="res://sprite/dice_animation/dice0032.png" id="38_otepn"]
[ext_resource type="Texture2D" uid="uid://c3byu82qy6wrk" path="res://sprite/dice_animation/dice0033.png" id="39_w562c"]
[ext_resource type="Texture2D" uid="uid://cn1phh1gvx2b4" path="res://sprite/dice_animation/dice0034.png" id="40_jm35k"]
[ext_resource type="Texture2D" uid="uid://bfhkeb1726kbf" path="res://sprite/dice_animation/dice0035.png" id="41_axj3e"]
[ext_resource type="Texture2D" uid="uid://dowqq628dasl1" path="res://sprite/dice_animation/dice0036.png" id="42_rymsq"]
[ext_resource type="Texture2D" uid="uid://7xb08xi0tjb1" path="res://sprite/dice_animation/dice0037.png" id="43_k58sd"]
[ext_resource type="Texture2D" uid="uid://i1d7jkkpc6fy" path="res://sprite/dice_animation/dice0038.png" id="44_1gvi3"]
[ext_resource type="Texture2D" uid="uid://bbhgnkxid1e4c" path="res://sprite/dice_animation/dice0039.png" id="45_w6tkb"]
[ext_resource type="Texture2D" uid="uid://cbpk35mr2ucxn" path="res://sprite/dice_animation/dice0040.png" id="46_ulnsh"]
[ext_resource type="Texture2D" uid="uid://dreyxcptiyts8" path="res://sprite/dice_face/1.png" id="47_fbghw"]
[ext_resource type="Texture2D" uid="uid://eni4y3kqrmla" path="res://sprite/dice_face/2.png" id="48_385x7"]
[ext_resource type="Texture2D" uid="uid://cylh51me1od6s" path="res://sprite/dice_face/3.png" id="49_hvfsc"]
[ext_resource type="Texture2D" uid="uid://cp5mlp24s2i54" path="res://sprite/dice_face/4.png" id="50_n3upd"]
[ext_resource type="Texture2D" uid="uid://b1bqom8i7ewxq" path="res://sprite/dice_face/5.png" id="51_h0mvv"]
[ext_resource type="Texture2D" uid="uid://cut84lcuu7si8" path="res://sprite/dice_face/6.png" id="52_sls3e"]

[sub_resource type="Curve2D" id="Curve2D_yx7mw"]
bake_interval = 1.0
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 36.704212, 890.66, 0, 0, 0, 0, 87.94692, 890.66, 0, 0, 0, 0, 139.18962, 889.5425, 0, 0, 0, 0, 191.31583, 890.66, 0, 0, 0, 0, 239.02455, 889.5425, 0, 0, 0, 0, 289.3838, 889.5425, 0, 0, 0, 0, 339.743, 889.5425, 0, 0, 0, 0, 390.1022, 889.5425, 0, 0, 0, 0, 438.69443, 890.66, 0, 0, 0, 0, 497.0051, 889.5425, 0, 0, 0, 0, 496.1216, 797.9075, 0, 0, 0, 0, 439.57794, 799.02496, 0, 0, 0, 0, 387.45172, 799.02496, 0, 0, 0, 0, 337.33975, 799.02496, 0, 0, 0, 0, 289.3838, 799.02496, 0, 0, 0, 0, 238.14105, 800.14246, 0, 0, 0, 0, 190.43233, 800.14246, 0, 0, 0, 0, 139.18962, 800.14246, 0, 0, 0, 0, 87.94692, 801.25995, 0, 0, 0, 0, 37.587708, 801.25995, 0, 0, 0, 0, 36.704212, 707.38995, 0, 0, 0, 0, 87.94692, 705.15497, 0, 0, 0, 0, 137.42264, 705.15497, 0, 0, 0, 0, 187.78185, 704.0375, 0, 0, 0, 0, 239.2718, 704.0375, 0, 0, 0, 0, 290.26727, 704.0375, 0, 0, 0, 0, 338.8595, 705.15497, 0, 0, 0, 0, 390.1022, 707.38995, 0, 0, 0, 0, 438.69443, 709.62494, 0, 0, 0, 0, 495.2381, 708.50745, 0, 0, 0, 0, 495.2381, 620.225, 0, 0, 0, 0, 438.94168, 621.34247, 0, 0, 0, 0, 393.88342, 621.34247, 0, 0, 0, 0, 338.8595, 621.34247, 0, 0, 0, 0, 289.3838, 621.34247, 0, 0, 0, 0, 239.02455, 621.34247, 0, 0, 0, 0, 188.0291, 620.225, 0, 0, 0, 0, 136.78639, 620.225, 0, 0, 0, 0, 89.71391, 621.34247, 0, 0, 0, 0, 36.704212, 621.34247, 0, 0, 0, 0, 36.704212, 538.64746, 0, 0, 0, 0, 89.96115, 539.76495, 0, 0, 0, 0, 139.18962, 539.76495, 0, 0, 0, 0, 186.01486, 540.8825, 0, 0, 0, 0, 237.25757, 540.8825, 0, 0, 0, 0, 287.6168, 542, 0, 0, 0, 0, 337.976, 542, 0, 0, 0, 0, 388.3352, 543.1175, 0, 0, 0, 0, 440.46143, 544.235, 0, 0, 0, 0, 496.1216, 545.3525, 0, 0, 0, 0, 496.1216, 454.83496, 0, 0, 0, 0, 439.57794, 454.83496, 0, 0, 0, 0, 387.45172, 454.83496, 0, 0, 0, 0, 338.8595, 454.83496, 0, 0, 0, 0, 287.6168, 454.83496, 0, 0, 0, 0, 239.02455, 455.95245, 0, 0, 0, 0, 190.43233, 457.06995, 0, 0, 0, 0, 140.07312, 459.30496, 0, 0, 0, 0, 87.94692, 459.30496, 0, 0, 0, 0, 37.587708, 460.42245, 0, 0, 0, 0, 36.704212, 358.72995, 0, 0, 0, 0, 87.06342, 360.96497, 0, 0, 0, 0, 140.32036, 360.96497, 0, 0, 0, 0, 188.66534, 362.08246, 0, 0, 0, 0, 238.14105, 363.19995, 0, 0, 0, 0, 288.50027, 364.31744, 0, 0, 0, 0, 339.743, 364.31744, 0, 0, 0, 0, 389.21872, 365.43497, 0, 0, 0, 0, 443.1119, 366.55246, 0, 0, 0, 0, 496.1216, 366.55246, 0, 0, 0, 0, 495.2381, 282.73996, 0, 0, 0, 0, 439.57794, 282.73996, 0, 0, 0, 0, 388.3352, 282.73996, 0, 0, 0, 0, 337.976, 283.85745, 0, 0, 0, 0, 287.6168, 283.85745, 0, 0, 0, 0, 236.37407, 284.97495, 0, 0, 0, 0, 187.78185, 284.97495, 0, 0, 0, 0, 139.18962, 287.20996, 0, 0, 0, 0, 87.94692, 287.20996, 0, 0, 0, 0, 37.587708, 287.20996, 0, 0, 0, 0, 36.067963, 200.04497, 0, 0, 0, 0, 87.94692, 201.16248, 0, 0, 0, 0, 138.30612, 202.27998, 0, 0, 0, 0, 189.54883, 203.39748, 0, 0, 0, 0, 238.14105, 203.39748, 0, 0, 0, 0, 287.6168, 203.39748, 0, 0, 0, 0, 338.8595, 204.51497, 0, 0, 0, 0, 389.21872, 204.51497, 0, 0, 0, 0, 438.69443, 204.51497, 0, 0, 0, 0, 497.0051, 204.51497, 0, 0, 0, 0, 497.0051, 109.52748, 0, 0, 0, 0, 438.0582, 108.40997, 0, 0, 0, 0, 389.46597, 107.29248, 0, 0, 0, 0, 336.45627, 107.29248, 0, 0, 0, 0, 293.165, 108.40997, 0, 0, 0, 0, 238.3883, 107.29248, 0, 0, 0, 0, 190.67958, 108.40997, 0, 0, 0, 0, 137.66988, 107.29248, 0, 0, 0, 0, 82.009705, 107.29248, 0, 0, 0, 0, 35.820717, 107.29248)
}
point_count = 100

[sub_resource type="SpriteFrames" id="SpriteFrames_1jxto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_r2ag1")
}, {
"duration": 1.0,
"texture": ExtResource("8_g5lq6")
}, {
"duration": 1.0,
"texture": ExtResource("9_c3wr8")
}, {
"duration": 1.0,
"texture": ExtResource("10_vv7wd")
}, {
"duration": 1.0,
"texture": ExtResource("11_eu8ig")
}, {
"duration": 1.0,
"texture": ExtResource("12_e022q")
}, {
"duration": 1.0,
"texture": ExtResource("13_fbghw")
}, {
"duration": 1.0,
"texture": ExtResource("14_385x7")
}, {
"duration": 1.0,
"texture": ExtResource("15_hvfsc")
}, {
"duration": 1.0,
"texture": ExtResource("16_n3upd")
}, {
"duration": 1.0,
"texture": ExtResource("17_h0mvv")
}, {
"duration": 1.0,
"texture": ExtResource("18_sls3e")
}, {
"duration": 1.0,
"texture": ExtResource("19_lx2ww")
}, {
"duration": 1.0,
"texture": ExtResource("20_kmnmp")
}, {
"duration": 1.0,
"texture": ExtResource("21_31efi")
}, {
"duration": 1.0,
"texture": ExtResource("22_j82wb")
}, {
"duration": 1.0,
"texture": ExtResource("23_s3fnt")
}, {
"duration": 1.0,
"texture": ExtResource("24_fgtea")
}, {
"duration": 1.0,
"texture": ExtResource("25_ji3tb")
}, {
"duration": 1.0,
"texture": ExtResource("26_x4tg7")
}, {
"duration": 1.0,
"texture": ExtResource("27_uwsi6")
}, {
"duration": 1.0,
"texture": ExtResource("28_o2gos")
}, {
"duration": 1.0,
"texture": ExtResource("29_4vxdq")
}, {
"duration": 1.0,
"texture": ExtResource("30_07j2u")
}, {
"duration": 1.0,
"texture": ExtResource("31_5eemc")
}, {
"duration": 1.0,
"texture": ExtResource("32_rs680")
}, {
"duration": 1.0,
"texture": ExtResource("33_j36ax")
}, {
"duration": 1.0,
"texture": ExtResource("34_ptgut")
}, {
"duration": 1.0,
"texture": ExtResource("35_fvacl")
}, {
"duration": 1.0,
"texture": ExtResource("36_q58vh")
}, {
"duration": 1.0,
"texture": ExtResource("37_jtphu")
}, {
"duration": 1.0,
"texture": ExtResource("38_otepn")
}, {
"duration": 1.0,
"texture": ExtResource("39_w562c")
}, {
"duration": 1.0,
"texture": ExtResource("40_jm35k")
}, {
"duration": 1.0,
"texture": ExtResource("41_axj3e")
}, {
"duration": 1.0,
"texture": ExtResource("42_rymsq")
}, {
"duration": 1.0,
"texture": ExtResource("43_k58sd")
}, {
"duration": 1.0,
"texture": ExtResource("44_1gvi3")
}, {
"duration": 1.0,
"texture": ExtResource("45_w6tkb")
}, {
"duration": 1.0,
"texture": ExtResource("46_ulnsh")
}],
"loop": false,
"name": &"dice_draw",
"speed": 15.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_lx2ww"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("47_fbghw")
}, {
"duration": 1.0,
"texture": ExtResource("48_385x7")
}, {
"duration": 1.0,
"texture": ExtResource("49_hvfsc")
}, {
"duration": 1.0,
"texture": ExtResource("50_n3upd")
}, {
"duration": 1.0,
"texture": ExtResource("51_h0mvv")
}, {
"duration": 1.0,
"texture": ExtResource("52_sls3e")
}],
"loop": true,
"name": &"dice_face",
"speed": 5.0
}]

[node name="Main_Game" type="Node2D"]
script = ExtResource("1_385x7")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(286, 494)
scale = Vector2(1.0009785, 1)
texture = ExtResource("1_1oj5k")

[node name="Dice_Base_Yellow" type="Sprite2D" parent="."]
position = Vector2(91.00001, 937.00006)
scale = Vector2(0.27355623, 0.26584023)
texture = ExtResource("2_yx7mw")

[node name="Yellow_Player" type="Sprite2D" parent="Dice_Base_Yellow"]
position = Vector2(-215.6778, -0.0002708435)
scale = Vector2(0.56290764, 0.44345674)
texture = ExtResource("3_eq12k")

[node name="Dice_Base_Green" type="Sprite2D" parent="."]
position = Vector2(483, 937.00006)
scale = Vector2(0.27355623, 0.26584023)
texture = ExtResource("2_yx7mw")
flip_h = true

[node name="Green_Player" type="Sprite2D" parent="Dice_Base_Green"]
position = Vector2(212.02231, 0.7247653)
scale = Vector2(0.51375383, 0.42632946)
texture = ExtResource("4_u4t67")

[node name="Dice_Base_Red" type="Sprite2D" parent="."]
position = Vector2(482.00006, 52.000004)
scale = Vector2(0.27355623, 0.26584023)
texture = ExtResource("2_yx7mw")
flip_h = true

[node name="Red_Player" type="Sprite2D" parent="Dice_Base_Red"]
position = Vector2(212.02211, -1.1920929e-05)
scale = Vector2(0.510071, 0.4426591)
texture = ExtResource("6_kgivx")

[node name="Dice_Base_Blue" type="Sprite2D" parent="."]
position = Vector2(90, 51)
scale = Vector2(0.27355623, 0.26584023)
texture = ExtResource("2_yx7mw")

[node name="Blue_Player" type="Sprite2D" parent="Dice_Base_Blue"]
position = Vector2(-215.67781, 3.8146973e-06)
scale = Vector2(0.46832585, 0.43666995)
texture = ExtResource("5_t6c1r")

[node name="Path" type="Path2D" parent="."]
z_index = 1
position = Vector2(-11.544336, 48.98883)
scale = Vector2(1.1318682, 0.8948546)
curve = SubResource("Curve2D_yx7mw")

[node name="Blue_Player" type="Sprite2D" parent="Path"]
position = Vector2(201.91779, 991.235)
rotation = 0.022993304
scale = Vector2(0.107750595, 0.10133631)
texture = ExtResource("5_t6c1r")

[node name="Red_Player" type="Sprite2D" parent="Path"]
position = Vector2(246.97607, 992.3524)
rotation = 0.022993304
scale = Vector2(0.107750595, 0.10133631)
texture = ExtResource("6_kgivx")

[node name="Green_Player" type="Sprite2D" parent="Path"]
position = Vector2(287.6168, 991.23486)
rotation = 0.022993302
scale = Vector2(0.107750595, 0.10133632)
texture = ExtResource("4_u4t67")

[node name="Yellow_Player" type="Sprite2D" parent="Path"]
position = Vector2(333.55856, 991.235)
rotation = 0.022993308
scale = Vector2(0.10385426, 0.1028429)
texture = ExtResource("3_eq12k")

[node name="Dice_Animation" type="AnimatedSprite2D" parent="."]
top_level = true
position = Vector2(122.00001, 939)
scale = Vector2(0.124489725, 0.121759236)
sprite_frames = SubResource("SpriteFrames_1jxto")
animation = &"dice_draw"
autoplay = "dice_draw"

[node name="Dice_Drawed" type="AnimatedSprite2D" parent="."]
position = Vector2(121.00003, 940)
scale = Vector2(0.1788618, 0.17407405)
sprite_frames = SubResource("SpriteFrames_lx2ww")
animation = &"dice_face"

[node name="Button" type="Button" parent="Dice_Drawed"]
offset_left = -178.90918
offset_top = -178.08545
offset_right = 178.90894
offset_bottom = 178.08496
action_mode = 0
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="animation_finished" from="Dice_Animation" to="." method="_on_dice_animation_finished"]
[connection signal="pressed" from="Dice_Drawed/Button" to="." method="_on_button_pressed"]
